--- a/projects/front-components/src/lib/components/table/td/td.component.scss
+++ b/projects/front-components/src/lib/components/table/td/td.component.scss
@@ -1,10 +1,24 @@
-:host {
-	position: relative;
-	border: 1px solid var(--border-primary);
-	border-block-start: none;
-	border-inline-start: none;
-
-	&:first-child {
-		border-left: 1px solid var(--border-primary);
-	}
-}
+//:host {
+//	position: relative;
+//	border: 1px solid var(--border-primary);
+//	border-block-start: none;
+//	border-inline-start: none;
+//	box-sizing: border-box;
+//
+//	&:first-child {
+//		border-left: 1px solid var(--border-primary);
+//	}
+//}
+//
+//
+//:host-context(tr:hover) {
+//	border-bottom: none !important;
+//
+//	&:not(:last-child){
+//		border-right: none;
+//	}
+//}
+//
+//:host-context(tr:last-child:hover) {
+//	border-bottom: 1px solid var(--border-primary) !important;
+//}
