--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -733,12 +733,15 @@
 
 <app-table-example></app-table-example>
 <br />
+<br />
+<br />
+<br />
 
-<!--<ss-lib-table>-->
-<!--	<tr-->
-<!--		*ngFor="let item of exampleItems"-->
-<!--		class="ss-lib-table-tr"-->
-<!--		app-example-table-tr-->
-<!--		[item]="item"-->
-<!--	></tr>-->
-<!--</ss-lib-table>-->
+<ss-lib-table>
+	<tr
+		*ngFor="let item of exampleItems"
+		class="ss-lib-table-tr"
+		app-example-table-tr
+		[item]="item"
+	></tr>
+</ss-lib-table>
