update button and  input

--- a/projects/front-components/src/lib/components/form-field/form-field.component.html
+++ b/projects/front-components/src/lib/components/form-field/form-field.component.html
@@ -40,6 +40,7 @@
 		class="field-container"
 		[class.validation]="showValidation()"
 		[class.state-disabled]="fieldCtrl!.ngControl.disabled"
+		[class.show-border]="!showBorder()"
 		[ngClass]="['state-' + currentFieldCtrlState()]"
 		(focusout)="updateFormFieldStateOnFocusout()"
 	>
